--- a/.gitignore
+++ b/.gitignore
@@ -29,6 +29,10 @@ vignettes/*.pdf
 /cache/
 *_cache/
 
+/*_files/
+/files/
+*_files/
+
 # Temporary files created by R markdown
 *.utf8.md
 *.knit.md
